--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="name">Name</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="filter_button">Filter</string>
+    <string name="filterImage">FilterImage</string>
+    <string name="article">Article</string>
+    <string name="local">Local</string>
+    <string name="book">Book</string>
+    <string name="select_pdf_files">Select PDF Files</string>
 </resources>
